tests/ui/consts/partial_qualif.stderr
error[E0492]: interior mutable shared borrows of lifetime-extended temporaries in the top-level scope of a constant are not allowed
  --> $DIR/partial_qualif.rs:6:5
   |
LL |     &{a}
   |     ^^^^ this borrow of an interior mutable value refers to a lifetime-extended temporary

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0492`.
